prevent container from becoming too small on tablet and mobile

--- a/apps/concierge_site/assets/css/app.scss
+++ b/apps/concierge_site/assets/css/app.scss
@@ -30,6 +30,14 @@ body {
   min-height: 100vh;
 }
 
+.container {
+  @include media-breakpoint-down(md) {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+}
+
 .error-page {
   text-align: center;
 }
